prevent css hover on mobile devices

--- a/static/global.css
+++ b/static/global.css
@@ -1,15 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
 
-@mixin hover() {
-
-  @media not all and (pointer:coarse) {
-    &:hover {
-      @content;
-    }
-  }
-}
-
-
 html, body {
 	margin: 0;
 	padding: 0;
